infra/deployment/dev/k8s/api-gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-depl
  namespace: development
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: slack-api-gateway-dev
          image: gcr.io/ticketing-dev-281211/slack-api-gateway-dev
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-srv
  namespace: development
spec:
  selector:
    app: api-gateway
  ports:
    - name: api-gateway
      protocol: TCP
      port: 3000
      targetPort: 3000
