infra/deployment/dev/k8s/channel-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: channel-mongo-depl
  namespace: development
spec:
  selector:
    matchLabels:
      app: channel-mongo
  template:
    metadata:
      labels:
        app: channel-mongo
    spec:
      containers:
        - name: channel-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: channel-mongo-srv
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: channel-mongo
  ports:
    - name: channel-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
