infra/deployment/dev/k8s/organization-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-depl
spec:
  selector:
    matchLabels:
      app: organization
  template:
    metadata:
      labels:
        app: organization
    spec:
      containers:
        - name: slack-organization-dev
          image: gcr.io/ticketing-dev-281211/slack-organization-dev
---
apiVersion: v1
kind: Service
metadata:
  name: organization-srv
spec:
  type: ClusterIP
  selector:
    app: organization
  ports:
    - name: organization
      protocol: TCP
      port: 3000
      targetPort: 3000
